statum-macros/tests/ui/invalid_transition_plain_struct_machine_name.stderr
error: Error: no `#[machine]` named `Machine` was found in module `invalid_transition_plain_struct_machine_name`.
       A struct named `Machine` exists on line 16, but it is not annotated with `#[machine]`.
       No same-named `#[machine]` items were found in other modules of this file.
       No `#[machine]` items were found in this module.
       Help: apply `#[transition]` to an impl for the machine type generated by `#[machine]` in this module.
       Correct shape: `#[transition] impl Machine<CurrentState> { ... }` where `Machine` is declared with `#[machine]` in `invalid_transition_plain_struct_machine_name`.
  --> tests/ui/invalid_transition_plain_struct_machine_name.rs:19:6
   |
19 | impl Machine<A> {
   |      ^^^^^^^
